--- a/Pomodoro_Clock/package.json
+++ b/Pomodoro_Clock/package.json
@@ -7,6 +7,7 @@
     "email": "prokawsar@gmail.com"
   },
   "dependencies": {
+    "@material-ui/core": "^4.5.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
